sdl-parser/src/snapshots/sdl_parser__infrastructure__tests__infranode_count_longhand_is_parsed.snap
---
source: sdl-parser/src/infrastructure.rs
expression: infra_node
---
LongNode(
    LongNode {
        count: 23,
        links: None,
        dependencies: None,
    },
)
