sdl-parser/src/snapshots/sdl_parser__infrastructure__tests__infranode_with_links_and_dependencies_is_parsed.snap
---
source: sdl-parser/src/infrastructure.rs
expression: infra_node
---
LongNode(
    LongNode {
        count: 25,
        links: Some(
            [
                "switch-2",
            ],
        ),
        dependencies: Some(
            [
                "windows-10",
                "windows-10-vuln-1",
            ],
        ),
    },
)
