sdl-parser/src/snapshots/sdl_parser__infrastructure__tests__simple_infrastructure_is_parsed.snap
---
source: sdl-parser/src/infrastructure.rs
expression: infrastructure
---
debian-2:
  count: 4
  links: ~
  dependencies: ~
  description: A Debian server
windows-10-vuln-1:
  count: 10
  links: ~
  dependencies: ~
  description: A vulnerable Windows 10 machine

