sdl-parser/src/snapshots/sdl_parser__infrastructure__tests__simple_infrastructure_with_shorthand_is_parsed.snap
---
source: sdl-parser/src/infrastructure.rs
expression: infrastructure
---
ubuntu-10:
  name: ~
  count: 5
  links: ~
  dependencies: ~
  description: ~
windows-10-vuln-1:
  name: ~
  count: 10
  links: ~
  dependencies: ~
  description: ~
windows-10-vuln-2:
  name: ~
  count: 10
  links: ~
  dependencies: ~
  description: ~

